--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "node.js": "^0.0.1-security",
     "pg": "^8.7.3"
   }
 }
